--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
     />
   </head>
   <body class="mat-typography">
-    <app-root class="full-height full-width"></app-root>
+    <app-root></app-root>
   </body>
 </html>
